<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp">

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_list_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/list_app_name"/>

        <TextView
            android:id="@+id/text_list_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/list_type"/>

        <TextView
            android:id="@+id/text_list_pkg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/list_pkg_name"/>

        <TextView
            android:id="@+id/text_list_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/list_version"/>
    </LinearLayout>
</LinearLayout>